test/typecheck/bad-select-cond.txt
;;; ERROR: 1
(module
  (func (result i32)
    i32.const 0
    i32.const 0
    f32.const 0
    select))
(;; STDERR ;;;
out/test/typecheck/bad-select-cond.txt:7:5: error: type mismatch in select, expected i32 but got f32.
    select))
    ^^^^^^
;;; STDERR ;;)
